# CogsciClaw

./: .env.example  .gitignore  .zenodo.json  AGENTS.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EVALUATION.md  GOVERNANCE.md  LICENSE-DECISION.md  MASTER_PLAN.md  METHODS_POLICY.md  Makefile  PLANS.md  README.md  ROADMAP.md  SECURITY.md  THREAT_MODEL.md  VISION.md  codemeta.json  llms.txt  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  design_partner.md  skill_proposal.md
.github/workflows/: ci.yml  codex-review.yml
benchmarks/: README.md  registry.json
docs/: architecture.md  codex-playbook.md  publication-strategy.md  references.md  reproducibility-bundle.md  standards-stack.md
docs/adrs/: ADR-0001-standards-first-v1.md
examples/eeg-oddball/: study_spec.yaml
examples/flanker-behavioral/: study_spec.yaml
project_state/: BACKLOG.md  CURRENT_STAGE.md  MILESTONE_HISTORY.md  NEXT_MILESTONE.md  README.md
schemas/: report-bundle.schema.json  study-spec.schema.yaml
schemas/hed/: flanker-demo-events.json
scripts/: render_skill_catalog.py  run_flanker_behavioral_slice.py  run_oddball_bids_slice.py
skills/: catalog.json
skills/bids-curator/: SKILL.md
skills/ddm-bayes/: SKILL.md
skills/eeg-meg-pipeline/: SKILL.md
skills/hed-annotator/: SKILL.md
skills/psychds-curator/: SKILL.md
skills/repro-bundle/: SKILL.md
templates/: SKILL-TEMPLATE.md
tests/: test_ddm_bayes.py  test_flanker_behavioral_slice.py  test_hed_annotator.py  test_oddball_bids_slice.py  test_smoke.py
(+13 files in other folders)
